docs(cheatsheets): регенерация TOC + обновление дат
scripts/cheatsheet-regenerate-toc.py — скрипт автоматической регенерации
оглавления из реальных заголовков файла. GFM-совместимый slugify (учёт
Unicode-спецсимволов, длинных тире —, `+`).

Прогон по каталогу (821 файл):
- Обновлён TOC в 598 файлах (первый проход)
- Дополнительно 174 файла после улучшения slugify (учёт «—», «+» и т.п.)
- Итоговая проверка: 0 битых якорей в TOC → 0 нарушений по всем правилам

Также обновлена frontmatter.updated до 2026-04-20 в 801 файле
(было ~"2026-02-11").

**Итог: lint 0/13 нарушений, TOC 0/0 битых якорей, 821 файл проходит проверку.**

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>